--- a/src/app/personnels/info-person/senimar-newpaper/senimar-newpaper.component.html
+++ b/src/app/personnels/info-person/senimar-newpaper/senimar-newpaper.component.html
@@ -1,10 +1,11 @@
 <div class="form-item">
-  <div class="form-item-title">Bài báo, báo cáo khoa học </div>
+  <div class="form-item-title">Bài báo, báo cáo khoa học</div>
   <form>
     <div class="action-form">
-      <button>Ghi nhận</button>
-      <button>Bỏ qua</button>
-      <button>Khóa dữ liệu</button>
+      <button (click)="onSave(0)">Ghi nhận</button>
+      <div *ngIf="message.condition && mode == 0" [ngClass]="'alert alert-'+ message.type">
+        {{message.content}}
+      </div>
     </div>
     <div class="row">
 
@@ -26,7 +27,7 @@
                 <th>Đồng tác giả</th>
                 <th>Trong nước/nước ngoài</th>
                 <th>
-                  <span class="action-icon" (click)="openModal(seminaModal)"><i class="fa fa-plus"></i></span>
+                  <span class="action-icon" (click)="openModals('SENIMAR')"><i class="fa fa-plus"></i></span>
                 </th>
               </tr>
               </thead>
@@ -41,7 +42,7 @@
                 <td>{{item.authors}}</td>
                 <td>{{item.location}}</td>
                 <td>
-                  <span class="action-icon" (click)="editItem('SENIMAR',i)"><i class="fa fa-edit"></i></span>
+                  <span class="action-icon" (click)="editItem('SENIMAR',item)"><i class="fa fa-edit"></i></span>
                   <span class="action-icon" (click)="removeItem('SENIMAR',i)"><i class="fa fa-remove "></i></span>
                   <span class="action-icon"><i class="fa fa-lock"></i></span>
                 </td>
@@ -60,8 +61,11 @@
       <!---->
       <div class="col-xs-12">
         <div class="form-item">
-          <div class="form-item-title">
-            Thông tin bài báo
+          <div class="action-form" style="margin-bottom: 0 !important;">
+            <button (click)="onSave(1)">Ghi nhận</button>
+            <div *ngIf="message.condition && mode == 1" [ngClass]="'alert alert-'+ message.type">
+              {{message.content}}
+            </div>
           </div>
           <div class="table-responsive">
             <table class="table table-bordered">
@@ -77,7 +81,7 @@
                 <th>Đồng tác giả</th>
                 <th>Trong nước/nước ngoài</th>
                 <th>
-                  <span class="action-icon" (click)="openModal(newspaperModal)"><i class="fa fa-plus"></i></span>
+                  <span class="action-icon" (click)="openModals('NEWSPAPER')"><i class="fa fa-plus"></i></span>
                 </th>
               </tr>
               </thead>
@@ -93,7 +97,7 @@
                 <td>{{item.authors}}</td>
                 <td>{{item.location}}</td>
                 <td>
-                  <span class="action-icon" (click)="editItem('NEWSPAPER',i)"><i class="fa fa-edit"></i></span>
+                  <span class="action-icon" (click)="editItem('NEWSPAPER',item)"><i class="fa fa-edit"></i></span>
                   <span class="action-icon" (click)="removeItem('NEWSPAPER',i)"><i class="fa fa-remove "></i></span>
                   <span class="action-icon"><i class="fa fa-lock"></i></span>
                 </td>
@@ -131,23 +135,22 @@
               </div>
               <div class="item-control">
                 <label>Trang đăng </label>
-                <input type="text" formControlName="pagePost">
+                <input type="number" min="1" formControlName="pagePost">
               </div>
             </div>
             <div class="col-xs-12 col-sm-4 ">
               <div class="item-control">
                 <label>Năm </label>
-                <input type="text" formControlName="year">
+                <input type="number" min="1900" formControlName="year">
               </div>
               <div class="item-control">
                 <label>Số tác giả </label>
-                <input type="text" formControlName="numberAuthor">
+                <input type="number" min="1" formControlName="numberAuthor">
               </div>
               <div class="item-control">
                 <label>Trong nước/ngoài nước </label>
                 <select class="form-control" formControlName="location">
-                  <option value="">Trong nước</option>
-                  <option value="">Ngoài nước</option>
+                  <option *ngFor="let item of location" [value]="item">{{item}}</option>
                 </select>
               </div>
               <div class="item-control">
@@ -163,7 +166,7 @@
   </modal-body>
 
   <modal-footer>
-    <button class="btn-action" (click)="addItem('SENIMAR')">{{positionSeminaUpdate == -1?'Thêm':'Cập nhật'}}</button>
+    <button class="btn-action" (click)="addItem('SENIMAR')">{{positionSeminaUpdate == null?'Thêm':'Cập nhật'}}</button>
   </modal-footer>
 
 </modal>
@@ -192,27 +195,26 @@
               </div>
               <div class="item-control">
                 <label>Tạp chỉ số </label>
-                <input type="text" formControlName="numberMagazine">
+                <input type="number" min="1" formControlName="numberMagazine">
               </div>
               <div class="item-control">
                 <label>Trang đăng </label>
-                <input type="text" formControlName="pagePost">
+                <input type="number" min="1" formControlName="pagePost">
               </div>
             </div>
             <div class="col-xs-12 col-sm-4 ">
               <div class="item-control">
                 <label>Năm </label>
-                <input type="text" formControlName="year">
+                <input type="number" min="1900" formControlName="year">
               </div>
               <div class="item-control">
                 <label>Số tác giả </label>
-                <input type="text" formControlName="numberAuthor">
+                <input type="number" formControlName="numberAuthor">
               </div>
               <div class="item-control">
                 <label>Trong nước/ngoài nước </label>
                 <select class="form-control" formControlName="location">
-                  <option value="">Trong nước</option>
-                  <option value="">Ngoài nước</option>
+                  <option *ngFor="let item of location" [value]="item">{{item}}</option>
                 </select>
               </div>
               <div class="item-control">
@@ -228,7 +230,7 @@
   </modal-body>
 
   <modal-footer>
-    <button class="btn-action" (click)="addItem('NEWSPAPER')">{{positionNewspaperUpdate == -1?'Thêm':'Cập nhật'}}
+    <button class="btn-action" (click)="addItem('NEWSPAPER')">{{positionNewspaperUpdate == null?'Thêm':'Cập nhật'}}
     </button>
   </modal-footer>
 
