tao phat minh sang che qua trinh xuat ban, danh muc khoa

--- a/src/app/personnels/form.css
+++ b/src/app/personnels/form.css
@@ -75,7 +75,7 @@ input {
 
 .item-control input[type='number'] {
   padding: 5px;
-  width: 80px;
+  /*width: 80px;*/
 }
 
 .item-control input[type='radio'], .item-control input[type='checkbox'] {
