--- a/src/app/personnels/info-person/publish-info/publish-info.component.html
+++ b/src/app/personnels/info-person/publish-info/publish-info.component.html
@@ -4,8 +4,10 @@
   </div>
   <form>
     <div class="action-form" style="margin-bottom: 10px;">
-      <button>Ghi nhận</button>
-      <button>Khóa dữ liệu</button>
+      <button (click)="onSave()">Ghi nhận</button>
+      <div *ngIf="message.condition" [ngClass]="'alert alert-'+ message.type">
+        {{message.content}}
+      </div>
     </div>
     <div class="table-responsive">
       <table class="table table-bordered">
@@ -17,7 +19,7 @@
           <th>Nhà xuất bản</th>
           <th>Vai trò</th>
           <th>
-            <span class="action-icon" (click)="openModal(publish)"><i class="fa fa-plus"></i></span>
+            <span class="action-icon" (click)="openModals()"><i class="fa fa-plus"></i></span>
           </th>
         </tr>
         </thead>
@@ -30,9 +32,8 @@
           <td>{{item.publishCompany}}</td>
           <td>{{item.role}}</td>
           <td>
-            <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
+            <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
             <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
-            <span class="action-icon"><i class="fa fa-lock"></i></span>
           </td>
         </tr>
 
@@ -74,9 +75,7 @@
           </div>
           <div class="item-control  ">
             <label>Vai trò </label>
-            <select class="form-control" formControlName="role">
-              <option value="">---Chọn---</option>
-            </select>
+            <input type="text" formControlName="role">
           </div>
         </div>
       </div>
@@ -84,7 +83,7 @@
   </modal-body>
 
   <modal-footer>
-    <button class="btn-action" (click)="addItem()">{{positionUpdate == -1?'Thêm':'Cập nhật'}}</button>
+    <button class="btn-action" (click)="addItem()">{{positionUpdate == null?'Thêm':'Cập nhật'}}</button>
   </modal-footer>
 
 </modal>
